[gd_scene load_steps=37 format=3 uid="uid://b1pe7lo3pwj0k"]

[ext_resource type="Script" path="res://game/levels/game_manager.gd" id="1_dk3ub"]
[ext_resource type="Curve" uid="uid://uiknf54j7x5x" path="res://game/levels/pull.tres" id="2_3y11a"]
[ext_resource type="PackedScene" uid="uid://5vkpxwgvm6c7" path="res://vfx/stars/stars.tscn" id="3_5posl"]
[ext_resource type="PackedScene" uid="uid://4dh527vyy6ak" path="res://game/levels/overlay.tscn" id="4_bnc4a"]
[ext_resource type="Script" path="res://game/killbox.gd" id="5_n0111"]
[ext_resource type="PackedScene" uid="uid://opsuu1r64pm7" path="res://game/player/player.tscn" id="6_2qrw4"]
[ext_resource type="Script" path="res://game/levels/wave.gd" id="7_2snvh"]
[ext_resource type="PackedScene" uid="uid://d3hb2g0vw7p7h" path="res://game/enemy/basic/basic_enemy.tscn" id="8_62wxc"]
[ext_resource type="PackedScene" uid="uid://b2bvdeyhcyp54" path="res://game/egg/egg.tscn" id="9_26mry"]
[ext_resource type="PackedScene" uid="uid://cax1lq5kxt68d" path="res://game/hole/hole_bullet.tscn" id="10_0glcu"]
[ext_resource type="Script" path="res://game/bossfight/boss.gd" id="10_371ml"]
[ext_resource type="Script" path="res://addons/resonate/sound_manager/sound_bank.gd" id="11_h3tpo"]
[ext_resource type="Script" path="res://addons/resonate/sound_manager/sound_event_resource.gd" id="12_yyw1w"]
[ext_resource type="AudioStream" uid="uid://8a00lqyeh2uc" path="res://game/enemy/enemy_shoot.wav" id="13_bq4bg"]
[ext_resource type="AudioStream" uid="uid://dk2nph2b5xsm8" path="res://game/enemy/kill.wav" id="14_o14mk"]
[ext_resource type="Script" path="res://game/bossfight/eye.gd" id="14_y3ccy"]
[ext_resource type="AudioStream" uid="uid://bwptm40nfd6lc" path="res://game/bossfight/explosion2.wav" id="15_ipyq7"]
[ext_resource type="Script" path="res://game/stopbox.gd" id="16_806fr"]
[ext_resource type="Script" path="res://game/hitbox.gd" id="16_xfbp3"]
[ext_resource type="Script" path="res://game/bossfight/turret.gd" id="17_4eets"]
[ext_resource type="Texture2D" uid="uid://cjbir8folnldo" path="res://game/bossfight/blink.png" id="17_50n47"]
[ext_resource type="Texture2D" uid="uid://cb87dh8igsehq" path="res://game/bossfight/turret.png" id="17_xionr"]
[ext_resource type="Texture2D" uid="uid://brf1xmx6wvx6h" path="res://game/bossfight/pupil.png" id="17_xq58n"]
[ext_resource type="Script" path="res://game/bossfight/pupil.gd" id="18_e871n"]
[ext_resource type="PackedScene" uid="uid://c3r5gvgxdlq0f" path="res://game/enemy/enemy_bullet.tscn" id="18_fqug5"]
[ext_resource type="PackedScene" uid="uid://dkanccmg2r1fd" path="res://game/enemy/death_particles.tscn" id="19_677hd"]
[ext_resource type="Texture2D" uid="uid://dkp11hon1w412" path="res://game/bossfight/wall.png" id="21_yt2kb"]
[ext_resource type="PackedScene" uid="uid://dgl7lsl0dm8rm" path="res://game/bossfight/explosion_particles.tscn" id="25_2oipp"]
[ext_resource type="Script" path="res://game/hurtbox.gd" id="26_mwrjq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q5sfn"]
size = Vector2(20, 273)

[sub_resource type="Resource" id="Resource_4y7un"]
script = ExtResource("12_yyw1w")
name = "fire"
bus = ""
volume = 0.0
pitch = 1.0
streams = Array[AudioStream]([ExtResource("13_bq4bg")])

[sub_resource type="Resource" id="Resource_1j08k"]
script = ExtResource("12_yyw1w")
name = "die"
bus = ""
volume = 0.0
pitch = 1.0
streams = Array[AudioStream]([ExtResource("14_o14mk")])

[sub_resource type="Resource" id="Resource_mmehh"]
script = ExtResource("12_yyw1w")
name = "explosion"
bus = ""
volume = -4.5
pitch = 1.0
streams = Array[AudioStream]([ExtResource("15_ipyq7")])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_entqs"]
size = Vector2(18, 12)

[sub_resource type="Gradient" id="Gradient_40dab"]
offsets = PackedFloat32Array(0.715278)
colors = PackedColorArray(0.988235, 0.894118, 0.658824, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pjhv8"]
gradient = SubResource("Gradient_40dab")
width = 1

[node name="Node2D" type="Node2D"]
texture_filter = 1
script = ExtResource("1_dk3ub")
hole_pull_curve = ExtResource("2_3y11a")
finish = NodePath("Waves/WaveFinal/Egg")
player = NodePath("Player")
level_index = 4

[node name="Stars" parent="." instance=ExtResource("3_5posl")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 160.0
offset_bottom = 144.0
color = Color(0.184314, 0.12549, 0.254902, 1)

[node name="Overlay" parent="." instance=ExtResource("4_bnc4a")]

[node name="Camera2D" type="Camera2D" parent="." groups=["camera"]]

[node name="ReferenceRect" type="ReferenceRect" parent="Camera2D"]
offset_left = -80.0
offset_top = -72.0
offset_right = 80.0
offset_bottom = 72.0
border_color = Color(0.366698, 0.477396, 1, 1)

[node name="Killbox" type="Area2D" parent="Camera2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("5_n0111")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Killbox"]
position = Vector2(-137, -3)
shape = SubResource("RectangleShape2D_q5sfn")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Camera2D/Killbox"]
position = Vector2(4, -145)
rotation = 1.57079
shape = SubResource("RectangleShape2D_q5sfn")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Camera2D/Killbox"]
position = Vector2(142, -6)
rotation = 3.14159
shape = SubResource("RectangleShape2D_q5sfn")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Camera2D/Killbox"]
position = Vector2(1, 135)
rotation = -1.5708
shape = SubResource("RectangleShape2D_q5sfn")

[node name="Player" parent="." instance=ExtResource("6_2qrw4")]
position = Vector2(-71, 0)

[node name="ReferenceRect" type="ReferenceRect" parent="."]
offset_left = -80.0
offset_top = -40.0
offset_right = 920.0
offset_bottom = 64.0

[node name="Waves" type="Node2D" parent="."]

[node name="w2" type="Node2D" parent="Waves"]
position = Vector2(108, 0)
script = ExtResource("7_2snvh")

[node name="Boss" type="Node2D" parent="Waves/w2"]
script = ExtResource("10_371ml")
enemy_scene = ExtResource("8_62wxc")
hole_scene = ExtResource("10_0glcu")

[node name="SoundBank" type="Node" parent="Waves/w2/Boss"]
script = ExtResource("11_h3tpo")
label = "boss"
bus = "sfx"
events = Array[ExtResource("12_yyw1w")]([SubResource("Resource_4y7un"), SubResource("Resource_1j08k"), SubResource("Resource_mmehh")])

[node name="Wall" type="Sprite2D" parent="Waves/w2/Boss"]
position = Vector2(-16, 11)
texture = ExtResource("21_yt2kb")

[node name="Eye" type="Node2D" parent="Waves/w2/Boss"]
script = ExtResource("14_y3ccy")
blink_texture = ExtResource("17_50n47")

[node name="DeathParticles" parent="Waves/w2/Boss/Eye" instance=ExtResource("19_677hd")]
position = Vector2(-14, -17)
script = null

[node name="Area2D2" type="Area2D" parent="Waves/w2/Boss/Eye"]
position = Vector2(-14, -17)
collision_layer = 2
collision_mask = 2
script = ExtResource("16_xfbp3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Waves/w2/Boss/Eye/Area2D2"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_entqs")

[node name="Pupil" type="Sprite2D" parent="Waves/w2/Boss/Eye"]
position = Vector2(-14, -17)
texture = ExtResource("17_xq58n")
script = ExtResource("18_e871n")

[node name="Eye2" type="Node2D" parent="Waves/w2/Boss"]
position = Vector2(0, 56)
script = ExtResource("14_y3ccy")
blink_texture = ExtResource("17_50n47")

[node name="Area2D2" type="Area2D" parent="Waves/w2/Boss/Eye2"]
position = Vector2(-14, -17)
collision_layer = 2
collision_mask = 2
script = ExtResource("16_xfbp3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Waves/w2/Boss/Eye2/Area2D2"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_entqs")

[node name="Pupil" type="Sprite2D" parent="Waves/w2/Boss/Eye2"]
position = Vector2(-14, -17)
texture = ExtResource("17_xq58n")
script = ExtResource("18_e871n")

[node name="DeathParticles" parent="Waves/w2/Boss/Eye2" instance=ExtResource("19_677hd")]
position = Vector2(-14, -17)
script = null

[node name="Sprite2D" type="Sprite2D" parent="Waves/w2/Boss"]
position = Vector2(-13.5, -41.5)
scale = Vector2(27, 1)
texture = SubResource("GradientTexture1D_pjhv8")

[node name="Sprite2D2" type="Sprite2D" parent="Waves/w2/Boss"]
position = Vector2(-13.5, 67)
scale = Vector2(27, 8)
texture = SubResource("GradientTexture1D_pjhv8")

[node name="Sprite2D3" type="Sprite2D" parent="Waves/w2/Boss"]
position = Vector2(13, 19.25)
scale = Vector2(27, 122.5)
texture = SubResource("GradientTexture1D_pjhv8")

[node name="Area2D" type="Area2D" parent="Waves/w2/Boss"]
collision_layer = 2
collision_mask = 2
script = ExtResource("16_806fr")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Waves/w2/Boss/Area2D"]
position = Vector2(-16, 11)
polygon = PackedVector2Array(16, 52, -12, 52, -12, 47, -11, 47, -11, 44, -10, 44, -10, 42, -9, 42, -9, 41, -8, 41, -8, 40, -7, 40, -7, 38, -6, 38, -6, 36, -5, 36, -5, 34, -4, 34, -3, 24, -3, 10, -4, 10, -4, 6, -5, 6, -5, 1, -6, 1, -6, -1, -5, -1, -5, -6, -4, -6, -4, -10, -3, -10, -3, -24, -4, -34, -5, -34, -5, -36, -6, -36, -6, -38, -7, -38, -7, -40, -8, -40, -8, -41, -9, -41, -9, -42, -10, -42, -10, -44, -11, -44, -11, -47, -12, -47, -12, -52, 16, -52)

[node name="Turret2" type="Node2D" parent="Waves/w2/Boss"]
position = Vector2(-16.5, 53.5)
script = ExtResource("17_4eets")
bullet_scene = ExtResource("18_fqug5")
bullet_timer = 0.75

[node name="Turret" type="Sprite2D" parent="Waves/w2/Boss/Turret2"]
z_index = 20
position = Vector2(-2, 0)
texture = ExtResource("17_xionr")
offset = Vector2(0.5, 0.5)

[node name="Turret" type="Node2D" parent="Waves/w2/Boss"]
position = Vector2(-16.5, -31.5)
script = ExtResource("17_4eets")
bullet_scene = ExtResource("18_fqug5")
bullet_timer = 1.5

[node name="Turret" type="Sprite2D" parent="Waves/w2/Boss/Turret"]
z_index = 20
position = Vector2(-2, 0)
texture = ExtResource("17_xionr")
offset = Vector2(0.5, 0.5)

[node name="ExplosionParticles" parent="Waves/w2/Boss" instance=ExtResource("25_2oipp")]
position = Vector2(-15, -29)

[node name="ExplosionParticles2" parent="Waves/w2/Boss" instance=ExtResource("25_2oipp")]
position = Vector2(-14, 48)

[node name="ExplosionParticles3" parent="Waves/w2/Boss" instance=ExtResource("25_2oipp")]
position = Vector2(-11, 28)

[node name="ExplosionParticles4" parent="Waves/w2/Boss" instance=ExtResource("25_2oipp")]
position = Vector2(-8, -9)

[node name="Hurtbox" type="Area2D" parent="Waves/w2/Boss"]
script = ExtResource("26_mwrjq")

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Waves/w2/Boss/Hurtbox"]
position = Vector2(-13, 11)
polygon = PackedVector2Array(16, 52, -12, 52, -12, 47, -11, 47, -11, 44, -10, 44, -10, 42, -9, 42, -9, 41, -8, 41, -8, 40, -7, 40, -7, 38, -6, 38, -6, 36, -5, 36, -5, 34, -4, 34, -3, 24, -3, 10, -4, 10, -4, 6, -5, 6, -5, 1, -6, 1, -6, -1, -5, -1, -5, -6, -4, -6, -4, -10, -3, -10, -3, -24, -4, -34, -5, -34, -5, -36, -6, -36, -6, -38, -7, -38, -7, -40, -8, -40, -8, -41, -9, -41, -9, -42, -10, -42, -10, -44, -11, -44, -11, -47, -12, -47, -12, -52, 16, -52)

[node name="WaveFinal" type="Node2D" parent="Waves"]
position = Vector2(264, 0)
script = ExtResource("7_2snvh")

[node name="Egg" parent="Waves/WaveFinal" instance=ExtResource("9_26mry")]
position = Vector2(-32, 0)

[node name="Label" type="Label" parent="."]
offset_left = 133.0
offset_top = -14.0
offset_right = 201.0
offset_bottom = 13.0
text = "Thank you
for playing
<3"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="Camera2D/Killbox" to="Camera2D/Killbox" method="_on_area_entered"]
[connection signal="dead" from="Waves/w2/Boss/Eye" to="Waves/w2/Boss" method="_eye_dead"]
[connection signal="dead" from="Waves/w2/Boss/Eye" to="Waves/w2/Boss/Turret" method="disable"]
[connection signal="life" from="Waves/w2/Boss/Eye" to="Waves/w2/Boss/Turret" method="enable"]
[connection signal="dead" from="Waves/w2/Boss/Eye2" to="Waves/w2/Boss" method="_eye_dead"]
[connection signal="dead" from="Waves/w2/Boss/Eye2" to="Waves/w2/Boss/Turret2" method="disable"]
[connection signal="life" from="Waves/w2/Boss/Eye2" to="Waves/w2/Boss/Turret2" method="enable"]
[connection signal="area_entered" from="Waves/w2/Boss/Hurtbox" to="Waves/w2/Boss/Hurtbox" method="_on_area_entered"]
